--- a/css/styles.css
+++ b/css/styles.css
@@ -58,11 +58,17 @@ body {
     color: var(--background-color-grey);
 }
 
+.header {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+
+}
+
 .address {
     font-style: normal;
 }
-
-
 
 .hero {
     font-size: 56px;
