--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ button {
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
-  letter-spacing: 0.02em
+  letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
   color: var(--second-text-color);
@@ -193,6 +193,10 @@ button {
 }
 
 .portfolio {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
   background-color: var(--background-color-white);
   color: var(--second-text-color);
 }
