--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,7 @@ button {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: var(--second-text-color);
 }
 
 .item {
@@ -143,11 +144,12 @@ button {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  background-color: var(--background-color-white);
   color: var(--global-text-color);
 }
 
 .team {
-  background-color: var(--background-color-white);
+  background-color: var(--background-color-grey);
   color: var(--second-text-color);
 }
 
@@ -156,6 +158,7 @@ button {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  background-color: var(--background-color-white);
 }
 
 .footer {
